--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@ margin-right: 20px;
 {
 font-size:75px;
 font-family:'Lobster';
-color:#336600;
+color:#194d00;
 }
 #slogan
 {
 font-size:16px;
-color:#336600;
+color:#194d00;
+font-weight: bold;
+font-family: Lucida Grande;
+
 }
 #searchArea
 {
@@ -114,9 +117,10 @@ padding:0;
   margin-right:15px;
   margin-bottom:10px;
   cursor:pointer;
-  text-decoration:underline;
   color:black;
   font-weight: bold;
+  font-family: Lucida Grande;
+
 }
 .leftLink
 {
@@ -125,9 +129,11 @@ padding:0;
   margin-left:15px;
   margin-bottom:10px;
   cursor:pointer;
-  text-decoration:underline;
   color:black;
     font-weight: bold;
+    font-family: Lucida Grande;
+
+
 
 }
 #announcement
@@ -135,7 +141,7 @@ padding:0;
   height:50px;
     padding:0px;
     margin:0px;
-    background-color:#6bab51;
+    background-color:#86b300;
 }
 
 
@@ -169,16 +175,16 @@ padding:0;
   <div id="footer">
     <div id="linkArea">
       <div id="socialMedia" class="leftLink link">
-        Social Media
+        SOCIAL MEDIA
       </div>
       <div id="mission" class="leftLink link">
-        Mission
+        MISSION
       </div>
       <div id="technology" class="rightLink link">
-        Technology
+        TECHNOLOGY
       </div>
       <div id="aboutUs"class="rightLink link">
-        About us
+        ABOUT US
       </div>
       <div style="clear:both;"></div>
     </div>
