--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ height:100%;
 background-repeat: no-repeat;
 background-size:cover;
 position:relative;
-min-width:800px;
+min-width:1025px;
 }
 
 #websiteArea
@@ -151,7 +151,7 @@ padding:0;
 <div id="websiteArea">
     <center>
   <div id="header">
-    <img id="icon" src="images/logo/user.png">
+    <img id="icon" src="images/logo/user_black.png">
   </div>
 
   <div id="body">
