--- a/results.html
+++ b/results.html
@@ -8,8 +8,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
 
 <link rel="stylesheet" href="library/horizontalScroll.css">
-
-
+<link rel="stylesheet" href="library/header.css">
 
 
 <style>
@@ -30,85 +29,20 @@ z-index:100;
 body
 {
 position:relative;
-margin: 0;
+margin:0;
+padding:0;
 z-index:-1;
-  min-Width:1000px;
-  background-color:#f0f5f5;
+min-width:1025px;
+background-color:#f0f5f5;
 }
 
-#header
-{
-position:relative;
-height:120px;
-background-color:#86b300;
-}
-#logo
-{
-position:absolute;
-width:120px;
-height:80px;
-margin-left:10px;
-margin-top:10px;
-cursor:pointer;
-}
-#name
-{
-position:absolute;
-font-size:25px;
-font-family:'Lobster';
-color:#336600;
-margin-top:80px;
-margin-left:10px;
-cursor:pointer;
-}
-#input+.tag-editor
-{
-position:absolute;
-width:550px;
-z-index:0; 
-border:2px solid black;
-left:150px;
-top:50;
-}
-#help
-{
-position:absolute;
-color:black;
-left:692px;
-height:22px;
-width:27px;
-z-index:1;
-font-size:25px;
-cursor:pointer;
-top:50px;
-}
-#submit
-{
--webkit-transform: scaleX(-1);
-transform: scaleX(-1);
-position:absolute;
-left:710px;
-height:30;
-width:60;
-z-index:1;
-cursor:pointer;
-top:50px;
-}
-#icon
-{
-float:right;
-cursor:pointer;
-width:80px;
-height:50px;
-margin-top: 40px;
-margin-right: 20px;
-}
+
 
 #searchResults
 {
-margin-left:125px;
+margin-left:110px;
 height:180px;
-width:800px;
+width:810px;
 }
 #searchResult
 {
@@ -151,7 +85,7 @@ font-weight: bold;
 #strainArea
 {
   margin-bottom:10px;
-  width:620px;
+  width:625px;
   height:120px;
   float:left;
 }
@@ -180,7 +114,7 @@ font-weight: bold;
 #dispensaryArea
 {
   margin-left:30px;;
-  width:170px;
+  width:160px;
   height:100px;
   float:left;
 }
@@ -199,7 +133,8 @@ height:100px;
 {
   width:20px;
   height:20px;
-
+  padding:0;
+  margin-bottom:0;
 }
 .hidden
 {
@@ -221,7 +156,7 @@ height:100px;
   background-color:#db9a60;
   border-radius: 10px;
   height:50px;
-  width:180px;
+  width:170px;
   text-align: center;
 }
 
@@ -237,8 +172,9 @@ height:100px;
   <input type="text" name="input" id="input"> 
   <div id="help">?</div>
   <img id="submit" src="images/logo/submit.png">
-  <img id="icon" src="images/logo/user.png">
+  <img id="icon" src="images/logo/user_white.png">
 </div>
+
 <div class="hidden">
   <div id="divider" >
     <h3 >Search Results</h3>
@@ -269,9 +205,13 @@ height:100px;
     <img id="strainIcon" src="logo.png" class="link" >
     <span id="strainTitle" class="result link">Super Lemon Haze - </span>
     <span id="strainMatch" class="result">Match 40% - </span>
-    <span id="strainRating" class="result">Rating: </span>
+    <span id="strainRating" class="result"></span>
     <span id="strainRatingIcons"> 
-      <img id="ratingIcon" src="logo.png" >
+      <img id="ratingIcon" src="images/logo/rating.jpeg" >
+      <img id="ratingIcon" src="images/logo/rating.jpeg" >
+      <img id="ratingIcon" src="images/logo/rating.jpeg" >
+      <img id="ratingIcon" src="images/logo/rating.jpeg" >
+      <img id="ratingIcon" src="images/logo/rating.jpeg" >
     </span>
     <div id="resultTop3"> </div>
     <div id="strainDescription" class="">Description</div>
@@ -299,7 +239,7 @@ height:100px;
   </template>
 
       <template>
-        <div id="dispensaryResult" class="horizontalScrollItem link">
+        <div id="dispensaryResult" class="horizontalScrollItem">
           <center>
           <div id="dispensaryName"></div>
           <div id="dispensaryDistance"></div>
