--- a/strain.html
+++ b/strain.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="library/horizontalScroll.css">
 
 <link rel="stylesheet" href="library/header.css">
+<script src="library/url.js"></script>
 
 
 
@@ -134,7 +135,6 @@ height:100px;
 
 
 <body>
-<script src="library/socket.js"></script>
 <script>
 $("#name").click(function() { window.location = "index.html"; });
 $("#logo").click(function() { window.location = "index.html"; });
@@ -186,6 +186,8 @@ $("#icon").click(function()
             Socket functions
 --------------------------------------------
 */
+var socket = io();
+
   socket.emit("GenerateSearch", GetSearch("search"), function(data)
   {
       data = data[0];
