--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ padding:0;
   </div>
 </body>
 
+<script src="library/submit.js"></script>
 
 <script>
 
@@ -212,26 +213,7 @@ $("#help").click(function()
 {
 });
 
-$("#submit").click(function()
-{
-var search = document.getElementById("input").value;
 
-  if(search.length == 0)
-  {
-    //go to strain of the day
-  }
-  else
-  {
-   var cSearchText = document.getElementById("input").value;
-
-    if(cSearchText.length > 0)
-    {
-      socket.close();
-      window.location = "results.html?" + "search=" + cSearchText + 
-        "&page=" + 1;  
-    }
-  }
-});
 
 $(".link").click(function() { window.location = this.id + ".html"; });
 </script>
